# query_engine

./: .gitignore  Cargo.toml
src/: db.rs  lib.rs  main.rs
src/binder/: mod.rs
src/binder/expression/: agg_func.rs  binary_op.rs  mod.rs
src/binder/statement/: mod.rs
src/binder/table/: mod.rs
src/catalog/: mod.rs
src/datasource/: csv.rs  mod.rs
src/executor/: array_compute.rs  evaluator.rs  filter.rs  mod.rs  project.rs  table_scan.rs
src/optimizer/: expr_rewriter.rs  expr_visitor.rs  input_ref_rewriter.rs  mod.rs  physical_rewriter.rs  plan_rewriter.rs  plan_visitor.rs
src/optimizer/plan_node/: dummy.rs  logical_agg.rs  logical_filter.rs  logical_project.rs  logical_table_scan.rs  mod.rs  physical_filter.rs  physical_project.rs  physical_simple_agg.rs  physical_table.rs  plan_node_traits.rs
src/planner/: mod.rs  select.rs  util.rs
src/storage/: csv.rs  memory.rs  mod.rs
src/types/: mod.rs
src/utill/: mod.rs
tests/: sample.csv
tests/csv/: sample.csv
tests/sqllogictest/: Cargo.toml
tests/sqllogictest/src/: lib.rs
tests/sqllogictest/tests/: sqllogictest.rs
